@@ -55,85 +55,86 @@
 #define ERR_UNKNOWN_OIDLABEL                     54
 #define ERR_SINGLE_SUBIDENTIFIER                 55
 #define ERR_SUBIDENTIFIER_VS_OIDLABEL            56
-#define ERR_OIDLABEL_DOESNOT_EXTEND              57
-#define ERR_EXISTENT_OBJECT                      58
-#define ERR_IDENTIFIER_NOT_IN_MODULE             59
-#define ERR_MACRO                                60
-#define ERR_CHOICE                               61
-#define ERR_TYPE_SMI                             62
-#define ERR_TYPE_TAG                             63
-#define ERR_MACRO_ALREADY_EXISTS                 64
-#define ERR_EXPORTS                              65
-#define ERR_ILLEGALLY_QUALIFIED                  66
-#define ERR_MISSING_DESCRIPTION                  67
-#define ERR_OIDLABEL_NOT_FIRST                   68
-#define ERR_UNKNOWN_TYPE                         69
-#define ERR_LOCATION                             70
-#define ERR_UNKNOWN_LOCATION_TYPE                71
-#define ERR_ILLEGAL_RANGE_FOR_PARENT_TYPE        72
-#define ERR_SMIV2_SIGNED_NUMBER_RANGE            73
-#define ERR_SMIV2_UNSIGNED_NUMBER_RANGE          74
-#define ERR_INTEGER32_TOO_LARGE                  75
-#define ERR_UNEXPECTED_VALUETYPE                 76
-#define ERR_SMI_NOT_SUPPORTED                    77
-#define ERR_SMING_NOT_SUPPORTED                  78
-#define ERR_UNUSED_IMPORT                        79
-#define ERR_MACRO_NOT_IMPORTED                   80
-#define ERR_IMPLICIT_NODE                        81
-#define ERR_SCALAR_READCREATE                    82
-#define ERR_NAMEDNUMBER_INCLUDES_HYPHEN          83
-#define ERR_NAMEDBIT_INCLUDES_HYPHEN             84
-#define ERR_REDEFINITION                         85
-#define ERR_EXT_REDEFINITION                     86
-#define ERR_CASE_REDEFINITION                    87
-#define ERR_EXT_CASE_REDEFINITION                88
-#define ERR_PREVIOUS_DEFINITION                  89
-#define ERR_INVALID_FORMAT                       90
-#define ERR_REFINEMENT_ALREADY_EXISTS            91
-#define ERR_OPTIONALGROUP_ALREADY_EXISTS         92
-#define ERR_ILLEGAL_OID_DEFVAL                   93
-#define ERR_UNEXPECTED_TYPE_RESTRICTION          94
-#define ERR_UNKNOWN_CONFIG_CMD                   95
-#define ERR_OPAQUE_OBSOLETE                      96
-#define ERR_DATE_CHARACTER                       97
-#define ERR_DATE_LENGTH                          98
-#define ERR_DATE_VALUE                           99
-#define ERR_DATE_YEAR_2DIGITS                    100
-#define ERR_DATE_YEAR                            101
-#define ERR_DATE_MONTH                           102
-#define ERR_DATE_DAY                             103
-#define ERR_DATE_HOUR                            104
-#define ERR_DATE_MINUTES                         105
-#define ERR_DATE_IN_FUTURE                       106
-#define ERR_DATE_IN_PAST                         107
-#define ERR_INTEGER_IN_SMIV2                     108
-#define ERR_MODULE_ALREADY_LOADED                109
-#define ERR_BASETYPE_NOT_IMPORTED                110
-#define ERR_BASETYPE_UNKNOWN                     111
-#define ERR_ROW_SUBID_ONE                        112
-#define ERR_ROWNAME_ENTRY                        113
-#define ERR_TABLENAME_TABLE                      114
-#define ERR_SMIV2_TYPE_ASSIGNEMENT               115
-#define ERR_ILLEGAL_IMPORT                       116
-#define ERR_SMIV2_NESTED_TEXTUAL_CONVENTION      117
-#define ERR_TABLE_ACCESS                         118
-#define ERR_ROW_ACCESS                           119
-#define ERR_ENUM_SUBTYPE                         120
-#define ERR_BITS_SUBTYPE                         121
-#define ERR_ENUM_NAME_REDEFINITION               122
-#define ERR_ENUM_NUMBER_REDEFINITION             123
-#define ERR_BITS_NAME_REDEFINITION               124
-#define ERR_BITS_NUMBER_REDEFINITION             125
-#define ERR_BITS_NUMBER_TOO_LARGE                126
-#define ERR_BITS_NUMBER_LARGE                    127
-#define ERR_RANGE_OUT_OF_BASETYPE                128
-#define ERR_RANGE_OVERLAP                        129
-#define ERR_RANGES_NOT_ASCENDING                 130
-#define ERR_EXCHANGED_RANGE_LIMITS               131
-#define ERR_INDEX_BASETYPE                       132
-#define ERR_INDEX_TOO_LARGE                      133
-#define ERR_INDEX_NO_RANGE                       134
+#define ERR_EXISTENT_OBJECT                      57
+#define ERR_IDENTIFIER_NOT_IN_MODULE             58
+#define ERR_MACRO                                59
+#define ERR_CHOICE                               60
+#define ERR_TYPE_SMI                             61
+#define ERR_TYPE_TAG                             62
+#define ERR_MACRO_ALREADY_EXISTS                 63
+#define ERR_EXPORTS                              64
+#define ERR_ILLEGALLY_QUALIFIED                  65
+#define ERR_MISSING_DESCRIPTION                  66
+#define ERR_OIDLABEL_NOT_FIRST                   67
+#define ERR_UNKNOWN_TYPE                         68
+#define ERR_LOCATION                             69
+#define ERR_UNKNOWN_LOCATION_TYPE                70
+#define ERR_ILLEGAL_RANGE_FOR_PARENT_TYPE        71
+#define ERR_SMIV2_SIGNED_NUMBER_RANGE            72
+#define ERR_SMIV2_UNSIGNED_NUMBER_RANGE          73
+#define ERR_INTEGER32_TOO_LARGE                  74
+#define ERR_UNEXPECTED_VALUETYPE                 75
+#define ERR_SMI_NOT_SUPPORTED                    76
+#define ERR_SMING_NOT_SUPPORTED                  77
+#define ERR_UNUSED_IMPORT                        78
+#define ERR_MACRO_NOT_IMPORTED                   79
+#define ERR_IMPLICIT_NODE                        80
+#define ERR_SCALAR_READCREATE                    81
+#define ERR_NAMEDNUMBER_INCLUDES_HYPHEN          82
+#define ERR_NAMEDBIT_INCLUDES_HYPHEN             83
+#define ERR_REDEFINITION                         84
+#define ERR_EXT_REDEFINITION                     85
+#define ERR_CASE_REDEFINITION                    86
+#define ERR_EXT_CASE_REDEFINITION                87
+#define ERR_PREVIOUS_DEFINITION                  88
+#define ERR_INVALID_FORMAT                       89
+#define ERR_REFINEMENT_ALREADY_EXISTS            90
+#define ERR_OPTIONALGROUP_ALREADY_EXISTS         91
+#define ERR_ILLEGAL_OID_DEFVAL                   92
+#define ERR_UNEXPECTED_TYPE_RESTRICTION          93
+#define ERR_UNKNOWN_CONFIG_CMD                   94
+#define ERR_OPAQUE_OBSOLETE                      95
+#define ERR_DATE_CHARACTER                       96
+#define ERR_DATE_LENGTH                          97
+#define ERR_DATE_VALUE                           98
+#define ERR_DATE_YEAR_2DIGITS                    99
+#define ERR_DATE_YEAR                            100
+#define ERR_DATE_MONTH                           101
+#define ERR_DATE_DAY                             102
+#define ERR_DATE_HOUR                            103
+#define ERR_DATE_MINUTES                         104
+#define ERR_DATE_IN_FUTURE                       105
+#define ERR_DATE_IN_PAST                         106
+#define ERR_INTEGER_IN_SMIV2                     107
+#define ERR_MODULE_ALREADY_LOADED                108
+#define ERR_BASETYPE_NOT_IMPORTED                109
+#define ERR_BASETYPE_UNKNOWN                     110
+#define ERR_ROW_SUBID_ONE                        111
+#define ERR_ROWNAME_ENTRY                        112
+#define ERR_TABLENAME_TABLE                      113
+#define ERR_SMIV2_TYPE_ASSIGNEMENT               114
+#define ERR_ILLEGAL_IMPORT                       115
+#define ERR_SMIV2_NESTED_TEXTUAL_CONVENTION      116
+#define ERR_TABLE_ACCESS                         117
+#define ERR_ROW_ACCESS                           118
+#define ERR_ENUM_SUBTYPE                         119
+#define ERR_BITS_SUBTYPE                         120
+#define ERR_ENUM_NAME_REDEFINITION               121
+#define ERR_ENUM_NUMBER_REDEFINITION             122
+#define ERR_BITS_NAME_REDEFINITION               123
+#define ERR_BITS_NUMBER_REDEFINITION             124
+#define ERR_BITS_NUMBER_TOO_LARGE                125
+#define ERR_BITS_NUMBER_LARGE                    126
+#define ERR_RANGE_OUT_OF_BASETYPE                127
+#define ERR_RANGE_OVERLAP                        128
+#define ERR_RANGES_NOT_ASCENDING                 129
+#define ERR_EXCHANGED_RANGE_LIMITS               130
+#define ERR_INDEX_BASETYPE                       131
+#define ERR_INDEX_TOO_LARGE                      132
+#define ERR_INDEX_NO_RANGE                       133
+#define ERR_INDEX_NO_RANGE_MOD                   134
 #define ERR_INDEX_NO_SIZE                        135
-#define ERR_INDEX_NEGATIVE                       136
-#define ERR_EMPTY_DESCRIPTION                    137
-#define ERR_INDEX_NOT_COLUMN                     138
+#define ERR_INDEX_NO_SIZE_MOD                    136
+#define ERR_INDEX_NEGATIVE                       137
+#define ERR_EMPTY_DESCRIPTION                    138
+#define ERR_INDEX_NOT_COLUMN                     139
