@@ -1,3 +1,8 @@
+2000-07-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* lib/check.c: Bill Fenner contributed a patch that fixes
+	the location of complained identifiers if they are imported.
+
 2000-06-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* libsmi-0.2.4.tar.gz: released version 0.2.4.
